--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,17 +19,18 @@
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
-      <artifactId>seam-servlet-parent</artifactId>
       <groupId>org.jboss.seam.servlet</groupId>
+      <artifactId>seam-servlet-parent</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    
    <artifactId>seam-servlet-api</artifactId>
-   <version>3.0.0-SNAPSHOT</version>
    
    <packaging>jar</packaging>
    <name>Seam Servlet Module API</name>
+   <!-- url required for JAR Manifest -->
+   <url>${project.parent.url}</url>
 
    <build>
       <plugins>
