--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -26,16 +26,16 @@
    </parent>
 
    <artifactId>seam-servlet-impl</artifactId>
-   <version>3.0.0-SNAPSHOT</version>
 
    <packaging>jar</packaging>
-   <name>Seam Servlet Module Core Implementation</name>
+   <name>Seam Servlet Module Implementation</name>
+   <!-- url required for JAR Manifest -->
+   <url>${project.parent.url}</url>
    
    <dependencies>
       <dependency>
          <artifactId>seam-servlet-api</artifactId>
          <groupId>org.jboss.seam.servlet</groupId>
-         <version>${project.version}</version>
          <scope>compile</scope>
       </dependency>
 
