switch to Seam Solder
- switch from Weld Extensions to Seam Solder
- remove functionality migrated to Solder
- relocate HttpMethod to event package
- generate ServletMessages and ServletLog concrete classes
- accomodate inverted type parameters on ProcessProducerMethod event
- tests for @Started WebApplication event
- update tests to reflect use of Servlet in event bridge

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -34,11 +34,11 @@
 
    <build>
       <plugins>
-         <!-- No tests in the api, skip phase -->
+         <!-- Skip test phase in API module -->
          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <skipTests>true</skipTests>
+               <skip>true</skip>
             </configuration>
          </plugin>
       </plugins>
