--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -40,43 +40,74 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-extensions</artifactId>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder-api</artifactId>
          <scope>compile</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.seam.catch</groupId>
          <artifactId>seam-catch-api</artifactId>
-         <version>3.0.0.Alpha2</version>
          <scope>provided</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging</artifactId>
-         <version>3.0.0.Beta4</version>
-         <scope>provided</scope>
+      </dependency>
+
+      <!-- JBoss Logging annotation processor for generating type-safe loggers -->
+      <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging-tools</artifactId>
+         <optional>true</optional>
       </dependency>
 
       <!-- Test Dependencies -->
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.jboss.arquillian</groupId>
          <artifactId>arquillian-junit</artifactId>
-         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-all</artifactId>
-         <version>1.8.4</version>
-         <scope>test</scope>
       </dependency>
    </dependencies>
+
+   <build>
+      <plugins>
+         <!-- Next two plugins configure 1.6 behavior for 1.5 compiler -->
+         <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>generate-sources</id>
+                  <phase>generate-sources</phase>
+                  <configuration>
+                     <tasks>
+                        <mkdir dir="${project.build.directory}/generated-sources/annotations"/>
+                     </tasks>
+                  </configuration>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <compilerArguments>
+                  <s>${project.build.directory}/generated-sources/annotations</s>
+               </compilerArguments>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
    <profiles>
       <profile>
@@ -92,12 +123,10 @@
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-               <scope>test</scope>
             </dependency>
             <dependency>
                <groupId>org.jboss.spec</groupId>
                <artifactId>jboss-javaee-6.0</artifactId>
-               <version>${jboss.javaee.version}</version>
                <type>pom</type>
                <scope>provided</scope>
             </dependency>
@@ -105,7 +134,6 @@
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core</artifactId>
                <scope>test</scope>
-               <optional>true</optional>
             </dependency>
             <dependency>
                <groupId>org.slf4j</groupId>
@@ -127,20 +155,16 @@
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-jbossas-remote-6</artifactId>
-               <version>${arquillian.version}</version>
-               <scope>test</scope>
             </dependency>
             <dependency>
                <groupId>org.jboss.spec</groupId>
                <artifactId>jboss-javaee-6.0</artifactId>
-               <version>${jboss.javaee.version}</version>
                <type>pom</type>
                <scope>provided</scope>
             </dependency>
             <dependency>
                <groupId>org.jboss.jbossas</groupId>
                <artifactId>jboss-as-client</artifactId>
-               <version>6.0.0.20100911-M5</version>
                <type>pom</type>
                <scope>test</scope>
             </dependency>
@@ -148,7 +172,6 @@
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core</artifactId>
                <scope>test</scope>
-               <optional>true</optional>
             </dependency>
          </dependencies>
          <build>
@@ -174,7 +197,6 @@
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-glassfish-embedded-3</artifactId>
-               <version>${arquillian.version}</version>
                <scope>test</scope>
             </dependency>
          </dependencies>
