add solder dependency

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -36,13 +36,16 @@
       <dependency>
          <artifactId>seam-servlet-api</artifactId>
          <groupId>org.jboss.seam.servlet</groupId>
-         <scope>compile</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.seam.solder</groupId>
          <artifactId>seam-solder-api</artifactId>
-         <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder-impl</artifactId>
       </dependency>
 
       <dependency>
