--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -22,7 +22,7 @@
    <parent>
       <groupId>org.jboss.seam.servlet</groupId>
       <artifactId>seam-servlet-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Alpha3</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
