--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -21,7 +21,7 @@
    <parent>
       <artifactId>seam-servlet-parent</artifactId>
       <groupId>org.jboss.seam.servlet</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Alpha3</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
@@ -92,7 +92,7 @@
                   <phase>generate-sources</phase>
                   <configuration>
                      <tasks>
-                        <mkdir dir="${project.build.directory}/generated-sources/annotations"/>
+                        <mkdir dir="${project.build.directory}/generated-sources/annotations" />
                      </tasks>
                   </configuration>
                   <goals>
