add combined JAR to dist
- also release notes from previous release

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>${project.version}</version>
          </dependency>
 
+         <dependency>
+            <groupId>org.jboss.seam.servlet</groupId>
+            <artifactId>seam-servlet</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+
          <!-- promote to parent -->
          <dependency>
             <groupId>org.jboss.logging</groupId>
