--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
    <parent>
       <groupId>org.jboss.seam</groupId>
       <artifactId>seam-parent</artifactId>
-      <version>5</version>
+      <version>6</version>
    </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
@@ -49,7 +49,7 @@
    </modules>
    
    <properties>
-      <seam.version>3.0.0.b04</seam.version>
+      <seam.version>3.0.0.b05</seam.version>
    </properties>
 
    <dependencyManagement>
@@ -178,6 +178,7 @@
             <dependency>
                <groupId>org.glassfish.extras</groupId>
                <artifactId>glassfish-embedded-all</artifactId>
+               <!-- TODO move version to seam-parent -->
                <version>3.0.1</version>
                <scope>provided</scope>
             </dependency>
