--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
    <parent>
       <groupId>org.jboss.seam</groupId>
       <artifactId>seam-parent</artifactId>
-      <version>8</version>
+      <version>9</version>
    </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
@@ -49,7 +49,7 @@
    </modules>
    
    <properties>
-      <seam.version>3.0.0.b07</seam.version>
+      <seam.version>3.0.0.CR1</seam.version>
    </properties>
 
    <dependencyManagement>
