--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -21,7 +21,7 @@
    <parent>
       <artifactId>seam-servlet-parent</artifactId>
       <groupId>org.jboss.seam.servlet</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.CR1</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
