--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,32 +16,40 @@
   limitations under the License.
 --> 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   
-   <parent>
-      <groupId>org.jboss.seam.servlet</groupId>
-      <artifactId>seam-servlet-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-   </parent>
-   
-   <artifactId>seam-servlet-api</artifactId>
-   
-   <packaging>jar</packaging>
-   <name>Seam Servlet API</name>
-   <!-- url required for JAR Manifest -->
-   <url>${project.parent.url}</url>
+    <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>org.jboss.seam.servlet</groupId>
+        <artifactId>seam-servlet-parent</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    
+    <artifactId>seam-servlet-api</artifactId>
+    
+    <packaging>jar</packaging>
+    <name>Seam Servlet API</name>
+    <!-- url required for JAR Manifest -->
+    <url>${project.parent.url}</url>
 
-   <build>
-      <plugins>
-         <!-- Skip test phase in API module -->
-         <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-               <skip>true</skip>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Skip test phase in API module -->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
