--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -37,6 +37,15 @@
     </properties>
     
     <dependencies>
+        <!-- Annotation processor for generating typed loggers -->
+        <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder-tooling</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <artifactId>seam-servlet-api</artifactId>
             <groupId>org.jboss.seam.servlet</groupId>
@@ -45,6 +54,7 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
