--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder-tooling</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.0.CR2</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.0.CR2</version>
         </dependency>
 
         <dependency>
