[maven-release-plugin] prepare release 3.0.0.CR2

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.jboss.seam.servlet</groupId>
     <artifactId>seam-servlet-parent</artifactId>
     <packaging>pom</packaging>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0.CR2</version>
 
     <name>Seam Servlet Module</name>
     <description>Additional CDI integration and other enhancements to the Servlet API</description>
@@ -297,8 +297,7 @@
                                     </goals>
                                     <configuration>
                                         <tasks>
-                                            <move file="${env.JBOSS_HOME}/bin/coverage.ec"
-                                                todir="${basedir}" failonerror="false" />
+                                            <move file="${env.JBOSS_HOME}/bin/coverage.ec" todir="${basedir}" failonerror="false" />
                                         </tasks>
                                     </configuration>
                                 </execution>
