--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,9 +41,15 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder-tooling</artifactId>
-            <version>3.0.0.CR2</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.jboss.seam.solder</groupId>
+                  <artifactId>seam-solder-api</artifactId>
+               </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -54,6 +60,7 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
