--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,7 +41,6 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder-tooling</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
             <exclusions>
@@ -60,13 +59,13 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.seam.catch</groupId>
             <artifactId>seam-catch-api</artifactId>
-            <version>3.0.0.CR1</version>
+            <!-- FIX THIS -->
+            <version>3.0.0.CR2</version>
             <scope>provided</scope>
         </dependency>
 
