--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </modules>
     
     <properties>
-        <seam.version>3.0.0.CR9</seam.version>
+        <seam.version>3.0.0.Final</seam.version>
         <emma.version>2.0.5312</emma.version>
     </properties>
 
