--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -24,7 +24,7 @@
         <version>3.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    
     <artifactId>seam-servlet-impl</artifactId>
 
     <packaging>jar</packaging>
@@ -34,6 +34,8 @@
 
     <properties>
         <jboss.javaee.spec.version>1.0.0.Final</jboss.javaee.spec.version>
+        <arquillian.version>1.0.0.Alpha5</arquillian.version> <!-- TODO remove once ARQ version is bumped in bom -->
+        <shrinkwrap.version>1.0.0-alpha-12</shrinkwrap.version> <!-- TODO remove once ARQ version is bumped in bom -->
     </properties>
     
     <dependencies>
@@ -79,6 +81,12 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+            <version>${shrinkwrap.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
