--- a/api/pom.xml
+++ b/api/pom.xml
@@ -38,6 +38,17 @@
             <artifactId>seam-solder-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <!-- Required until the Servlet 3.0 API can be resolved in Central -->
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
