--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -34,53 +34,68 @@
 
     <properties>
         <jboss.javaee.spec.version>1.0.0.Final</jboss.javaee.spec.version>
+        <arquillian.version>1.0.0.CR1</arquillian.version>
+        <jbossas7.version>7.0.0.CR1</jbossas7.version>
     </properties>
     
     <dependencies>
-        <!-- Annotation processor for generating typed loggers -->
+        <dependency>
+            <!-- Required until the Servlet 3.0 API can be resolved in Central -->
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+    <!-- Annotation processor for generating typed loggers -->
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder-tooling</artifactId>
             <scope>provided</scope>
             <optional>true</optional>
             <exclusions>
-               <exclusion>
-                  <groupId>org.jboss.seam.solder</groupId>
-                  <artifactId>seam-solder-api</artifactId>
-               </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.seam.solder</groupId>
+                    <artifactId>seam-solder-api</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
-
+    
         <dependency>
             <artifactId>seam-servlet-api</artifactId>
             <groupId>org.jboss.seam.servlet</groupId>
         </dependency>
-
+    
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
         </dependency>
-
+    
         <dependency>
             <groupId>org.jboss.seam.catch</groupId>
             <artifactId>seam-catch-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
+    
         <!-- Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.arquillian</groupId>
-            <artifactId>arquillian-junit</artifactId>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <version>${arquillian.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
-    </dependencies>
+</dependencies>
 
     <build>
         <plugins>
@@ -121,8 +136,6 @@
                     <name>!arquillian</name>
                 </property>
             </activation>
-            <dependencies>
-            </dependencies>
             <build>
                 <plugins>
                     <plugin>
@@ -173,13 +186,14 @@
             <activation>
                 <property>
                     <name>arquillian</name>
-                    <value>jbossas-remote</value>
+                    <value>jbossas-remote-6</value>
                 </property>
             </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-jbossas-remote-6</artifactId>
+                    <version>${arquillian.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.spec</groupId>
@@ -200,23 +214,13 @@
                     <scope>test</scope>
                 </dependency>
             </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources</directory>
-                    </testResource>
-                    <testResource>
-                        <directory>src/test/resources-jbossas</directory>
-                    </testResource>
-                </testResources>
-            </build>
         </profile>
         <profile>
             <id>arq-jbossas-managed</id>
             <activation>
                 <property>
                     <name>arquillian</name>
-                    <value>jbossas-managed</value>
+                    <value>jbossas-managed-6</value>
                 </property>
             </activation>
             <properties>
@@ -227,6 +231,7 @@
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-jbossas-managed-6</artifactId>
+                    <version>${arquillian.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.spec</groupId>
@@ -251,16 +256,38 @@
                     <scope>test</scope>
                 </dependency>
             </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources</directory>
-                    </testResource>
-                    <testResource>
-                        <directory>src/test/resources-jbossas</directory>
-                    </testResource>
-                </testResources>
-            </build>
+        </profile>
+        <profile>
+            <id>arq-jbossas-remote-7</id>
+            <activation>
+                <property>
+                    <name>arquillian</name>
+                    <value>jbossas-remote-7</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>${jbossas7.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>arq-jbossas-managed-7</id>
+            <activation>
+                <property>
+                    <name>arquillian</name>
+                    <value>jbossas-managed-7</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${jbossas7.version}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>arq-glassfish-embedded</id>
@@ -274,6 +301,7 @@
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-glassfish-embedded-3</artifactId>
+                    <version>${arquillian.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
