--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -25,7 +25,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>seam-servlet-impl</artifactId>
+    <artifactId>seam-servlet</artifactId>
 
     <packaging>jar</packaging>
     <name>Seam Servlet Implementation</name>
