--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
     <parent>
         <groupId>org.jboss.seam</groupId>
         <artifactId>seam-parent</artifactId>
-        <version>9</version>
+        <version>12</version>
     </parent>
 
     <groupId>org.jboss.seam.servlet</groupId>
     <artifactId>seam-servlet-parent</artifactId>
     <packaging>pom</packaging>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.1.0-SNAPSHOT</version>
 
     <name>Seam Servlet Module</name>
     <description>Additional CDI integration and other enhancements to the Servlet API</description>
@@ -48,7 +48,7 @@
     </modules>
     
     <properties>
-        <seam.version>3.0.0.Final</seam.version>
+        <seam.version>3.1.0.Beta1</seam.version>
         <emma.version>2.0.5312</emma.version>
     </properties>
 
