--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -73,6 +73,7 @@
         <dependency>
             <groupId>org.jboss.seam.solder</groupId>
             <artifactId>seam-solder</artifactId>
+            <scope>compile</scope>
         </dependency>
     
         <dependency>
