--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jboss.seam.servlet</groupId>
         <artifactId>seam-servlet-parent</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0.Beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
