--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>seam-servlet-parent</artifactId>
         <groupId>org.jboss.seam.servlet</groupId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0.Beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
